[gd_scene load_steps=15 format=3 uid="uid://bv4vq2lpfpw30"]

[ext_resource type="Texture2D" uid="uid://bf7popw72ob6k" path="res://Assets/Main Menu Background (Blurred).png" id="1_8wod1"]
[ext_resource type="Script" path="res://main_menu.gd" id="1_agjqo"]
[ext_resource type="Texture2D" uid="uid://cgl3cdpq12byj" path="res://Assets/ENGKLEK HOP.png" id="3_42s78"]
[ext_resource type="Texture2D" uid="uid://ba0yfjgo52wtq" path="res://Assets/Settings Button.png" id="3_npkcl"]
[ext_resource type="Texture2D" uid="uid://4ksh88kqt5fm" path="res://Assets/Singleplayer Button.png" id="4_ltnod"]
[ext_resource type="Texture2D" uid="uid://csxv8ajm56urp" path="res://Assets/Multiplayer Button.png" id="5_cqxrs"]
[ext_resource type="Texture2D" uid="uid://dntnrp5aq1tll" path="res://Assets/Tutorial Button.png" id="7_g24ng"]
[ext_resource type="Texture2D" uid="uid://b74w8acu1ok7w" path="res://Assets/Funfact Button.png" id="8_nw6x2"]
[ext_resource type="Texture2D" uid="uid://tclviouhjy62" path="res://Assets/Minimize Button.png" id="9_ok20o"]
[ext_resource type="Texture2D" uid="uid://b6hne00xvxsuw" path="res://Assets/Maximize Button.png" id="10_hvant"]

[sub_resource type="Theme" id="Theme_3cole"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_v7o77"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_g3dml"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_h5mar"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_agjqo")
tween_intensity = 1.1
tween_duration = 0.3

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_8wod1")

[node name="Title" type="TextureRect" parent="."]
layout_mode = 2
offset_left = 362.0
offset_top = 70.0
offset_right = 915.0
offset_bottom = 301.0
grow_horizontal = 2
size_flags_horizontal = 4
texture = ExtResource("3_42s78")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -189.5
offset_top = -40.0
offset_right = 189.5
offset_bottom = 289.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 12

[node name="SingleplayerButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_3cole")
theme_override_colors/icon_pressed_color = Color(0.45098, 0.45098, 0.45098, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_v7o77")
icon = ExtResource("4_ltnod")
flat = true
icon_alignment = 1

[node name="MultiplayerButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_3cole")
theme_override_colors/icon_pressed_color = Color(0.45098, 0.45098, 0.45098, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_v7o77")
icon = ExtResource("5_cqxrs")
flat = true
icon_alignment = 1

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/icon_pressed_color = Color(0.45098, 0.45098, 0.45098, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_g3dml")
icon = ExtResource("3_npkcl")
flat = true

[node name="TutorialButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/icon_pressed_color = Color(0.45098, 0.45098, 0.45098, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_h5mar")
icon = ExtResource("7_g24ng")
flat = true

[node name="FunfactButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = -132.0
offset_right = 132.0
offset_bottom = -40.0
grow_vertical = 0
theme_override_colors/icon_pressed_color = Color(0.45098, 0.45098, 0.45098, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_h5mar")
icon = ExtResource("8_nw6x2")
flat = true

[node name="MinimizeButton" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -140.0
offset_top = -132.0
offset_right = -48.0
offset_bottom = -40.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/icon_pressed_color = Color(0.45098, 0.45098, 0.45098, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_h5mar")
icon = ExtResource("9_ok20o")
flat = true

[node name="MaximizeButton" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -140.0
offset_top = -132.0
offset_right = -48.0
offset_bottom = -40.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/icon_pressed_color = Color(0.45098, 0.45098, 0.45098, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_h5mar")
icon = ExtResource("10_hvant")
flat = true

[connection signal="pressed" from="VBoxContainer/SingleplayerButton" to="." method="_on_singleplayer_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MultiplayerButton" to="." method="_on_multiplayer_button_pressed"]
[connection signal="pressed" from="VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="VBoxContainer/TutorialButton" to="." method="_on_tutorial_button_pressed"]
[connection signal="pressed" from="FunfactButton" to="." method="_on_funfact_button_pressed"]
[connection signal="pressed" from="MinimizeButton" to="." method="_on_minimize_button_pressed"]
[connection signal="pressed" from="MaximizeButton" to="." method="_on_maximize_button_pressed"]
